--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,6 +15,7 @@
     <div class="copyright">
       <p class="credit">
         {{ with .Site.Params.copyright }}
+        {{ . | safeHTML }}
         {{ end }}
       </p>
     </div>
